2010-07-30  David Reveman  <davidr@novell.com>

	* collection.cpp (UIElementZIndexComparer): Only compare
	Z values when both elements have perspective transformations
	attached to them.

	* canvas.h: Use FP_NAN as default value for Z property.

	* projection.h:
	* projection.cpp: Return NaN instead of zero from
	DistanceFromXYPlane when distance can't be properly
	calculated.

2010-07-29  David Reveman  <davidr@novell.com>

	* uielement.cpp (ComputeTransform): Fix inheritance of
	perspective transformations for popup dialogs.

2010-07-28  David Reveman  <davidr@novell.com>

	* effect.c:
	* effect.cpp: Use cairo for integer translation.

	* projection.h:
	* projection.cpp: Add IsTranslation and IsIntegerTranslation.

	* dirty.cpp:
	* uielement.cpp: Invalidate the parent instead of the
	element itself whenever the change causing the
	invalidation doesn't require the bitmap cache to be
	invalidated.

2010-07-28  David Reveman  <davidr@novell.com>

	* grid.cpp:
	* runtime.cpp:
	* stylus.cpp:
	* uielement.h:
	* uielement.cpp: Have GetCr return NULL for contexts with
	pre-rendered bitmaps and in that way prevent unnecessary
	rendering of cached elements.

	* uielement.h:
	* uielement.cpp: Add initial bitmap cache support.
	New functions InvalidateBitmapCache and InvalidateCacheMode.

	* runtime.h:
	* runtime.cpp: Remove ContextNode::GetTarget.
	Add ContextNode::GetBitmap and ContextNode::SetBitmap.

2010-07-28  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (ComputeActualSize): If available width and
	height are both infinity, then return 0,0 to keep the moon-unit
	DefaultValue tests passing.
	(OnPropertyChanged): If the AspectRatio changes, we need to call
	InvalidateMeasure(). Another fix toward making Seadragon-513 pass.

2010-07-27  David Reveman  <davidr@novell.com>

	* uielement.cpp (PreRender): Need to apply transform before
	calling cairo_mask.

	* uielement.cpp: Call GetCr only when necessary.
