@@ -560,7 +560,7 @@ UIElementZIndexComparer (gconstpointer ui1, gconstpointer ui2)
 		double z1 = Canvas::GetZ (*((UIElement **) ui1));
 		double z2 = Canvas::GetZ (*((UIElement **) ui2));
 
-		if (z1 == FP_NAN || z2 == FP_NAN)
+		if (isnan (z1) || isnan (z2))
 			return 0;
 
 		return z1 > z2 ? 1 : z1 < z2 ? -1 : 0;
